<resources>
    <string name="app_name">Twitter-S</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="for_you">For you</string>
    <string name="following">Following</string>
</resources>