...
        delay(500)
        viewModel.getTweets()
    }

    when (tweetsResponse) {
        is Response.Success -> {
            LazyColumn(modifier = Modifier.padding(padding).testTag("Tweets List")) {
                items((tweetsResponse as Response.Success<TweetsResponse>).data.tweets) {
                    Tweet(it)
                }
            }
        }

...
